finished second  div

--- a/port.html
+++ b/port.html
@@ -6,16 +6,26 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="port.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="port.js"></script>
 </head>
 <body>
     <main>
         <div id="first">
-         <div class="fs-2 bg-warning mt-xxl ">about</div>
+         <div class="fs-2 bg-warning text-center">contact  <a class="text-dark" href="www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+            <a class="text-success" href="www.whatsapp.com/login"><i class="fa-brands fa-whatsapp"></i></a>
+            <a class="text-danger" href="www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+            
+         </div>
          <h1></h1>
          <h2 class="fs-7 text-tertiary">ORDIA PRECIOUS MURPHY</h2>
          <h3 class="fs-7 text-primary">FRONT-END DEVELOPER</h3>
         </div>
+        <div class="bg-info-subtle" id="second">
+            <p class="text-center text-warning fs-4 p-5">Hi my name is Ordia Precious Murphy,<br> i am a front end developer based in Nigeria and also a crypto analyst,<br> i have several skills in full stack development.</p>
+        </div>
+        
+
 
     </main>
 
